Added win/loss mechanic
First to 5 wins, added a game message and a new game button.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="main">
             <div class="mainHeader">
-                <h3>Choose wisely!</h3>
+                <h3 id="gameMsg">Choose wisely!</h3>
             </div>
             <div class="buttons">
                 <button type="button" id="rockButton"><img alt="rockImg" src="./images/rock-icon-8519.png"></button>
@@ -32,6 +32,7 @@
             </div>
         </div>
         <div class="footer">
+            <button id="newGame" type="button">New Game</button>
             <a href="https://www.freeiconspng.com">Image Source</a>
         </div>
         <script src="/main.js"></script>
