--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             <button id="newGame" type="button">New Game</button>
             <a href="https://www.freeiconspng.com">Image Source</a>
         </div>
-        <script src="/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
