--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="header">
-            <h1>ROCK PAPER SCISSORS!</h1>
+            <h1>🔥ROCK PAPER SCISSORS!💀</h1>
         </div>
         <div class="score">
             <img id="vsImg1" src="">
@@ -23,7 +23,8 @@
         </div>
         <div class="main">
             <div class="mainHeader">
-                <h3 id="gameMsg">Choose wisely!</h3>
+                <h3>First To 5 wins! 👑</h3>
+                <h3 id="gameMsg">Choose wisely! 💀</h3>
             </div>
             <div class="buttons">
                 <button type="button" id="rockButton"><img alt="rockImg" src="./images/rock-icon-8519.png"></button>
